dataset1235/2025-2/1955397009/users/4018420266/executions/2304143742_359761547.log
== SUBMISSION (2025-09-02 13:09:23)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:09:18)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:11:13)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informe a idade da pessoa: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da pessoa: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informe a idade da pessoa: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informe a idade da pessoa: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informe a idade da pessoa: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informe a idade da pessoa: paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:09:17)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:09:23)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:08:39)
-- CODE: 
idade = int(imput("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:10:42)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:09:29)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:10:47)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:09:27)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:10:02)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:09:28)
-- CODE: 
idade = int(input("Informe a idade da pessoa: "))
if >= 2:
  print("paga")
else:
  print("nao_paga")
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if >= 2:
       ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
